[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/tabletop/Deck.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.8047, 100.684 )

[node name="Deck" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 67, 101 )
scale = Vector2( 0.066, 0.068 )
region_enabled = true
region_rect = Rect2( 80, 10, 2030, 2970 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 67, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
